# zero2prod

./: .env  .envrc  .tmuxrc.sh  Cargo.toml  config.yml
.github/workflows/: general.yml
migrations/: 001_create_subscriptions_table.sql
scripts/: postgresql.sh
src/: config.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
